[tool.poetry]
name = "mqtt-logger"
version = "0.1.0"
description = "A logger that logs messages to an MQTT topic."
authors = ["Alex Gonzalez <alex@muxu.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = ">=1.6.1"
systemd-python = "^234"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
